[package]
name = "hydra"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["boot"]

[dependencies]
bootloader = "0.10.9"
volatile = "0.2.6"
x86_64 = "0.14.6"
uart_16550 = "0.2.15"
spin = "0.9.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
	"-device",
	"isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial",
	"stdio",
	"-display",
	"none"
]
test-success-exit-code = 33
